# notifica-python

./: .gitignore  LICENSE  README.md  pyproject.toml
src/notifica/: __init__.py  client.py  errors.py  types.py
src/notifica/resources/: __init__.py  analytics.py  api_keys.py  audit.py  billing.py  channels.py  domains.py  inbox.py  inbox_embed.py  notifications.py  sms.py  subscribers.py  templates.py  webhooks.py  workflows.py
tests/: conftest.py  test_analytics.py  test_api_keys.py  test_billing.py  test_channels.py  test_client.py  test_domains.py  test_inbox.py  test_notifications.py  test_sms.py  test_subscribers.py  test_templates.py  test_webhooks.py  test_workflows.py
