[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notifica"
version = "0.1.0"
description = "SDK Python oficial para o Notifica — plataforma de notificações multicanal"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Notifica", email = "suporte@usenotifica.com.br" },
]
keywords = ["notifica", "notifications", "whatsapp", "sms", "email", "webhook"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.30.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/gchapim/notifica-python"
Documentation = "https://docs.usenotifica.com.br"
Repository = "https://github.com/gchapim/notifica-python"
Issues = "https://github.com/gchapim/notifica-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/notifica"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
